syntax = "proto3";

option csharp_namespace = "CoffeeShopClient";
import "google/protobuf/empty.proto";

package coffee;

service CoffeeShop {
    rpc OrderCoffee(OrderRequest) returns (CoffeeResponse);
    rpc GetMenu(google.protobuf.Empty) returns (MenuResponse);
}

message OrderRequest {
    Coffee coffee = 1;
}

message CoffeeResponse {
    Coffee coffee = 1;
    string receipt = 2;
}

message MenuResponse {
    repeated MenuRecord menu_records = 1;
}

message MenuRecord {
    Coffee coffee = 1;
    int32 price = 2;
}

enum Coffee {
    COFFEE_UNSPECIFIED = 0;
    COFFEE_AMERICANO = 1;
    COFFEE_LATTE = 2;
    COFFEE_FLAT_WHITE = 3;
    COFFEE_ESPRESSO = 4;
}